- (BUGF) another potential unicode fix
- (BUGF) bonding interface setup for RHEL4 now works
- (BUGF) generate DHCP info even if netboot is disabled
- (BUGF) Change to network_config snippet to ignore bond masters to prevent anaconda failures when MAC addresses are not specified
- (BUGF) fix to CLI rename deleting subobjects via cobblerd (important!)

- XXX - 1.6.3
- (BUGF) import with datestamp 0 when .discinfo is not found, do not crash
- (BUGF) various fixes to "cobbler report" when using non-standard formats
- (BUGF) rename with same name does not delete
- (BUGF) Fix for traceback when generating DHCP config and the bonding_master interface does not exist.
- (BUGF) remove trailing newline from tokens
- (BUGF) fix unicode handling of some fields under EL4
- (BUGF) fix webui search error (fixed better on devel)
- (BUGF) fix duplicate power reference
- (BUGF) fix error message that makes it appear dnsmasq had a problem restarting, when it did not
- (BUGF) workaround for blank ifnames 
- (BUGF) spec requires python-urlgrabber
- (BUGF) change settings default from 'ksdevice=eth0' to 'bootif'
- (BUGF) keep DHCP restart quiet
- (BUGF) better hostname setting with DHCP management on
- (BUGF) fix bug in repo breed auto-detection code
- (BUGF) close file descriptors by using subprocess, not os.system
- (BUGF) make cobbler package Arch for now, require syslinux where it makes sense only.  To be changed in later release to download it from intertubes.
- (BUGF) reinstate mod_python form submission code

- Mon Mar 30 2009 - 1.6.2
- (BUGF) Fix for cache cleanup problem in cobblerd 

- Fri Mar 27 2009 - 1.6.1
- (FEAT) Improved anaconda monitoring code
- (FEAT) download comps.xml always
- (FEAT) performance upgrades for cobblerd service to avoid reloads
- (FEAT) more code for s390 imports (WIP)
- (BUGF) import works better with rawhide
- (FEAT) snippet to preserve SSH host keys across reinstalls
- (FEAT) email trigger to notify when builds finish